src/snapshots/sel__check__test-8.snap
---
source: src/check.rs
expression: "t(b\"add 3 2 1\")"
---
(
    Tree {
        ty: Named(
            "ret",
            RefCell {
                value: None,
            },
        ),
        val: Apply(
            Tree {
                ty: Func(
                    Number,
                    Func(
                        Number,
                        Number,
                    ),
                ),
                val: Word(
                    "add",
                    Fundamental(
                        Add,
                    ),
                ),
            },
            [
                Tree {
                    ty: Number,
                    val: Number(
                        3.0,
                    ),
                },
                Tree {
                    ty: Number,
                    val: Number(
                        2.0,
                    ),
                },
                Tree {
                    ty: Number,
                    val: Number(
                        1.0,
                    ),
                },
            ],
        ),
    },
    [
        Error(
            Location(
                "<test>",
                0..3,
            ),
            ContextCaused {
                error: Error(
                    Location(
                        "<test>",
                        0..7,
                    ),
                    NotFunc {
                        actual_type: Number,
                    },
                ),
                because: FuncTooManyArgs {
                    nth_arg: 3,
                    func: "add",
                },
            },
        ),
    ],
)
